daim lehele jooniste lisamine

--- a/daim_marabou_uhistend.html
+++ b/daim_marabou_uhistend.html
@@ -117,18 +117,11 @@
                         class="w-100 zoom" alt="" />
                 </div>
                 <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641652639/Koduleht/kvaliteedi_logo_wcrj4z.jpg"
+                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673730686/Koduleht/m66tud_yby1f9.png"
                         class="w-100 zoom" alt="" />
-                </div>
-                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp"><a
-                        href="images/Data talks_esitlus_10_21.pdf" target="_blank">
 
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641670366/Koduleht/konverents_kavandid2_e3gucg.jpg"
-                            class="w-100 zoom" alt="" /></a>
                 </div>
-
             </div>
-        </div>
     </section>
     <!-- end gallery section -->
     <!-- start gallery section -->
