Mars lehe tegemine

--- a/index.html
+++ b/index.html
@@ -419,10 +419,10 @@
 
                         <!-- start  portfolio item -->
                         <li class="grid-item wow animate__fadeInUp trükis disain hindamine" data-wow-delay="0.4s">
-                            <a href="kalender.html">
+                            <a href="mars_roll_up_b2nner.html">
                                 <figure>
                                     <div class="portfolio-img"><img
-                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673710877/Koduleht/floor-display-stand-mockup-right-view_2000x2000_yxnenp.jpg"
+                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673776527/Koduleht/mars_roll-up_b2nner_h3jetc.jpg"
                                             alt="" /></div>
                                     <figcaption>
                                         <div class="portfolio-hover-main">
