--- a/mars_roll_up_b2nner.html
+++ b/mars_roll_up_b2nner.html
@@ -67,17 +67,19 @@
                         &nbsp;&nbsp; • &nbsp;&nbsp; Disain</span>
                     <h1
                         class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">
-                        Daim ja Marabou ühisstend
-                    </h1>
+                        Mars roll-up bänner</h1>
                 </div>
                 <div
                     class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
-                    <p>Ülesandeks oli luua Daim ja Marabou suvise kampaania ühisstend hüpermarketitesse. Kujundusel tuli
-                        lähtuda mõlema brändi
-                        visuaalsest identiteedist ning oluline oli ka välja tuua kampaania peaauhind - elektriline
-                        tõukeratas.
-                        Sanitex on Leedu ja Läti suurim hulgimüügi-, distributsiooni- ja logistikaettevõte, mis tegutseb
-                        ka Eestis ning Poolas.
+                    <p>Kujundada noortepärane Mars roll-up bänner Simpel Sessionile. Kujundusel tuli kujutada noori
+                        inimesi, kes tegelevad
+                        ekstreemspordiga. Kindlasti pidi kujundusel olulisel kohal olema Marsi logo. Simple Session on
+                        tänaseks kujunenud üheks
+                        pikaajalisema traditsiooniga ekstreemspordivõistluseks maailmas ja rahvusvaheliselt tuntumaks
+                        Eesti spordisündmuseks.
+                        Aegade jooksul on siin võisteldud erinevatel tänavaspordi aladel, kuid peamisteks
+                        tõmbenumbriteks on jäänud siiski rula
+                        ning BMX-i street ja pargisõit.
                     </p>
                 </div>
                 <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
@@ -85,7 +87,7 @@
                         <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Klient:</label>Sanitex OÜ</li>
                         <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Iseseisev töö</label></li>
                         <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>
-                            Daim ja Marabou ühisstend </li>
+                            Mars roll-up bänner</li>
                         <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>Juuni 2022</li>
                         <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a
                                 href="#">www.freepik.com</a></li>
@@ -109,19 +111,16 @@
     <section class="wow animate__fadeIn">
         <div class="container">
             <div class="row">
-                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673732667/Koduleht/Marabou_daim-%C3%BChisdisplay_270522_qn9cum.jpg"
+                <div class="col-6 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
+                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673777566/Koduleht/bmx_challenge_b2nner_1_rwaufp.jpg"
                         class="w-100 zoom" alt="" />
                 </div>
-                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673732862/Koduleht/Marabou_daim-%C3%BChisdisplay_270522_2_jmlhiy.jpg"
+                <div class="col-6 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
+                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673779743/Koduleht/bmx_challenge_b2nner_2_tnetbz.jpg"
                         class="w-100 zoom" alt="" />
                 </div>
-                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673730686/Koduleht/m66tud_yby1f9.png"
-                        class="w-100 zoom" alt="" />
 
-                </div>
+
             </div>
     </section>
     <!-- end gallery section -->
