ajakirja mockup muutedud ja reet juhendajaga lisatud

--- a/ajakiri.html
+++ b/ajakiri.html
@@ -89,7 +89,8 @@
                     <ul class="list-style-6 margin-twelve-left">
                         <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Klient:</label>Kuressaare
                             Ametikool</li>
-                        <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Juhendaja:</label>Tiiu Tuhkanen
+                        <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Juhendaja:</label>Tiiu
+                            Tuhkanen, Reet Salumaa
                         </li>
                         <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Ajakirja
                             kujundus</li>
@@ -270,7 +271,7 @@
             <div class="row align-items-center">
                 <!-- start copyright -->
                 <div class="col-lg-4 col-md-5 text-small text-center alt-font sm-margin-15px-bottom">
-                    &COPY; Kõik õigused kaitstud 2022 <a href="#" target="_blank"
+                    &COPY; Kõik õigused kaitstud 2023 <a href="#" target="_blank"
                         title=""></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; oliver.juss@ametikool.ee
                 </div>
                 <!-- end copyright -->
