--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             <a href="ajakiri.html">
                                 <figure>
                                     <div class="portfolio-img"><img
-                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/c_scale,w_900/v1641308899/Koduleht/Kaanekujundus_800x800px_l4fxja.jpg"
+                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673790704/Koduleht/ametikoolo_100_ajakiri_1x1_jioorv.jpg"
                                             alt="" /></div>
                                     <figcaption>
                                         <div class="portfolio-hover-main">
