koverensti lehele kavadide lisamine ja pdf  muudmine

--- a/konverents_logo.html
+++ b/konverents_logo.html
@@ -114,10 +114,18 @@
                         class="w-100 zoom" alt="" />
                 </div>
                 <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp"><a
-                        href="images/Data talks_esitlus_10_21.pdf" target="_blank">
+                        href="images/Data talks_esitlus_17_10.pdf" target="_blank"><img
+                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673796329/Koduleht/Data-talks_esitlus_copy_qysbiq.jpg"
+                            class="w-100 zoom" alt="" />
 
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641670366/Koduleht/konverents_kavandid2_e3gucg.jpg"
-                            class="w-100 zoom" alt="" /></a>
+                </div>
+                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
+                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673792604/Koduleht/kavandid_koveresi_v8gla3.jpg"
+                        class="w-100 zoom" alt="" />
+                </div>
+                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
+                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673795259/Koduleht/kavand2_yoginh.jpg"
+                        class="w-100 zoom" alt="" />
                 </div>
 
             </div>
