pipewell lehel Iseseisevt66 muutmine

--- a/pipewell.html
+++ b/pipewell.html
@@ -79,7 +79,7 @@
                 <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                     <ul class="list-style-6 margin-twelve-left">
                         <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Klient:</label>Veljo Kuusk</li>
-                        <li class="margin-5px-bottom"><label class="w-30 d-inline-block">iseseisev töö</label></li>
+                        <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Iseseisev töö</label></li>
                         <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>luua
                             ettevõttele Pipewell OÜ CVI</li>
                         <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>Detsember 2020</li>
