--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                                 class="light-gray-text-link text-very-small">Disain</a></li>
                         <li class="nav"><a href="javascript:void(0);" data-filter=".trükis"
                                 class="light-gray-text-link text-very-small">Trükis</a></li>
-                        <li class="nav"><a href="javascript:void(0);" data-filter=".hindamine"
-                                class="light-gray-text-link text-very-small">Kooli tööd</a></li>
+                        <li class="nav"><a href="javascript:void(0);" data-filter=".cvi"
+                                class="light-gray-text-link text-very-small">CVI</a></li>
                     </ul>
                     <!-- end filter navigation -->
                 </div>
