--- a/sos_lastekula_voltik.html
+++ b/sos_lastekula_voltik.html
@@ -80,7 +80,7 @@
                     <ul class="list-style-6 margin-twelve-left">
                         <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Klient:</label>SOS Lasteküla
                         </li>
-                        <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Juhendaja</label>
+                        <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Iseseisev töö</label>
                         </li>
                         <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Kujundada
                             reklaamvoldik
