sos tekstide lisamine

--- a/sos_lastekula_voltik.html
+++ b/sos_lastekula_voltik.html
@@ -64,21 +64,26 @@
             <div class="row">
                 <div class="col-12 text-center margin-60px-bottom md-margin-30px-bottom sm-margin-10px-bottom">
                     <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Disain
-                        &nbsp;&nbsp; • &nbsp;&nbsp; Trükkis</span>
+                        &nbsp;&nbsp; • &nbsp;&nbsp; Trükis</span>
                     <h1
                         class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">
                         SOS Lasteküla voldik</h1>
                 </div>
                 <div
                     class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
-                    <p>Ülesanne oli teha 3D programmis Blender pulgajäätis. Jäätise modelleerimisel kasutasin
-                        videomaterjali abi. Kuna olen eelnevalt mitmeid kordi Blenderiga kokkupuutunud siis valmis
-                        jäätise modelleerimine kiiresti ja raske see minu jaoks polnud. Kuna igapäevaselt ma Blenderit
-                        ei kasuta siis oli heaks meenutuseks kuidas Blender töötab. </p>
+                    <p>SOS Lasteküla eesmärk on suurendada laste ja perede heaolu Eestis ja kogu maailmas. Pakutakse
+                        kogukonnapõhist
+                        perehooldust ja kohandatud toetust peredele. Samuti tegutsetakse omavalitsuste ja riigi
+                        arengupartnerina, et edendada
+                        lastega perede heaolu. Lisaks kogutakse rahalisi vahendeid laste ja perede toetamiseks.
+                        Ülesandeks oli kujundada peredele ja töötajatele reklaamvoldik. Kasutada tuli ettevõtte
+                        tunnusvärve ja logo. Minu loodud
+                        kavandid olid disainilt lihtsad ja minimalistlikud. </p>
                 </div>
                 <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                     <ul class="list-style-6 margin-twelve-left">
                         <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Klient:</label>SOS Lasteküla
+                            Eesti Ühing
                         </li>
                         <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Iseseisev töö</label>
                         </li>
