spotib2nneri lehel uks pilt muutsin WEB formati ja v6tsin uhe ara

--- a/spordibanner.html
+++ b/spordibanner.html
@@ -112,16 +112,13 @@
             <div class="row">
                 <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
                     <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641716437/Koduleht/jalgpallurid_u8aooe.jpg"
-                        class="w-100" alt="" />
+                        class="w-100 zoom" alt="" />
                 </div>
                 <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641718547/Koduleht/jalgpallurd2i_zr60a2.jpg"
-                        class="w-100" alt="" />
+                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674135614/Koduleht/aiabanner_5mx0.75m_copy_d5zbkh.webp"
+                        class="w-100 zoom" alt="" />
                 </div>
-                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641718547/Koduleht/jalgpallurid3_naqokk.jpg"
-                        class="w-100" alt="" />
-                </div>
+               
 
             </div>
         </div>
