--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div
                     class="col-12 col-md-3 d-flex flex-column align-items-center justify-content-center one-third-screen lg-h-330px md-h-500px sm-h-auto text-center wow  sm-h-auto sm-margin-30px-bottom">
                     <img alt=""
-                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641635896/Koduleht/portree-02_xqjfbd.jpg">
+                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674222458/Koduleht/prortree_animatsioon_sz9r7c.gif">
                 </div>
                 <div
                     class="col-12 col-md-6 d-flex flex-column align-items-center justify-content-center one-third-screen lg-h-350px md-h-500px sm-h-auto text-center sm-h-auto">
