sporitbaneri lahel piltite vahemine ja koolitusmajal ka

--- a/koolitusmajakas.html
+++ b/koolitusmajakas.html
@@ -107,11 +107,24 @@
             <div class="row">
                 <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
                     <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641639527/Koduleht/900x445px-_koolitusmajakasLogo2_yeqpbk.jpg"
-                        class="w-100" alt="" />
+                        class="w-100 zoom" alt="" />
                 </div>
                 <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1667217454/Koduleht/Koolimajakas_logo_t8w9tr.jpg"
-                        class="w-100" alt="" />
+                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674303633/Koduleht/Koolimajakas_logo_main_copy_wokcta.webp"
+                        class="w-100 zoom" alt="" />
+                </div>
+                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
+                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674303633/Koduleht/Koolimajakas_logo3_copy_wnx1zd.webp"
+                        class="w-100 zoom" alt="" />
+                </div>
+                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
+                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674303633/Koduleht/Koolimajakas_logo2_imcq8m.webp"
+                        class="w-100 zoom" alt="" />
+                </div>
+                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
+                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674303633/Koduleht/Koolimajakas_logo4_copy_dnbcyc.webp"
+                        class="w-100 zoom" alt="" />
+
                 </div>
 
             </div>
@@ -257,7 +270,7 @@
             <div class="row align-items-center">
                 <!-- start copyright -->
                 <div class="col-lg-4 col-md-5 text-small text-center alt-font sm-margin-15px-bottom">
-                    &COPY; Kõik õigused kaitstud 2022 <a href="#" target="_blank"
+                    &COPY; Kõik õigused kaitstud 2023 <a href="#" target="_blank"
                         title=""></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; oliver.juss@ametikool.ee
                 </div>
                 <!-- end copyright -->
