--- a/spordibanner.html
+++ b/spordibanner.html
@@ -115,10 +115,14 @@
                         class="w-100 zoom" alt="" />
                 </div>
                 <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674135614/Koduleht/aiabanner_5mx0.75m_copy_d5zbkh.webp"
+                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674302366/Koduleht/aiabanner_5mx0.75m2_copy_qslq6i.webp"
                         class="w-100 zoom" alt="" />
                 </div>
-               
+                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
+                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674302367/Koduleht/aiabanner_5mx0.75m_copy_qwgwoh.webp"
+                        class="w-100 zoom" alt="" />
+                </div>
+
 
             </div>
         </div>
@@ -277,7 +281,7 @@
             <div class="row align-items-center">
                 <!-- start copyright -->
                 <div class="col-lg-4 col-md-5 text-small text-center alt-font sm-margin-15px-bottom">
-                    &COPY; Kõik õigused kaitstud 2022 <a href="#" target="_blank"
+                    &COPY; Kõik õigused kaitstud 2023 <a href="#" target="_blank"
                         title=""></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; oliver.juss@ametikool.ee
                 </div>
                 <!-- end copyright -->
