indexi lehel k6ki piltide muutmine webi formati

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             <a href="ajakiri.html">
                                 <figure>
                                     <div class="portfolio-img"><img
-                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673790704/Koduleht/ametikoolo_100_ajakiri_1x1_jioorv.jpg"
+                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674306210/Koduleht/ametikoolo_100_ajakiri_1x1_copy_xomohg.webp"
                                             alt="" /></div>
                                     <figcaption>
                                         <div class="portfolio-hover-main">
@@ -168,7 +168,7 @@
                             <a href="konverents_logo.html">
                                 <figure>
                                     <div class="portfolio-img"><img
-                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673342463/Koduleht/orginal_1x1_pbqba5.jpg"
+                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674306211/Koduleht/orginal_1x1_copy_bdzrmx.webp"
                                             alt="" /></div>
                                     <figcaption>
                                         <div class="portfolio-hover-main">
@@ -190,7 +190,7 @@
                             <a href="minu_cvi.html">
                                 <figure>
                                     <div class="portfolio-img"><img
-                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1669657110/Koduleht/minuviisitkaart_mbgpbm.jpg"
+                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674306212/Koduleht/minuviisitkaart_copy_fuwvih.webp"
                                             alt="" /></div>
                                     <figcaption>
                                         <div class="portfolio-hover-main">
@@ -213,7 +213,7 @@
                             <a href="eesti_ekspress.html">
                                 <figure>
                                     <div class="portfolio-img"><img
-                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673786413/Koduleht/34985971_536_2_newspaper_mockups_2700x1335_tvvvho.jpg"
+                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674306211/Koduleht/34985971_536_2_newspaper_mockups_2700x1335_copy_ve817m.webp"
                                             alt="" /></div>
                                     <figcaption>
                                         <div class="portfolio-hover-main">
@@ -265,7 +265,7 @@
                             <a href="sos_lastekula_voltik.html">
                                 <figure>
                                     <div class="portfolio-img"><img
-                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673786957/Koduleht/original_votink2_2700x1336_ceyfcp.jpg"
+                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674306213/Koduleht/original_votink2_2700x1336_copy_spqizh.webp"
                                             alt="" /></div>
                                     <figcaption>
                                         <div class="portfolio-hover-main">
@@ -287,7 +287,7 @@
                             <a href="pipewell.html">
                                 <figure>
                                     <div class="portfolio-img"><img
-                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1670492819/Koduleht/pipewell_v_org_1_1_kbueqn.jpg"
+                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674306510/Koduleht/pipewell_v_org_1_1_copy_ljrwhr.webp"
                                             alt="" /></div>
                                     <figcaption>
                                         <div class="portfolio-hover-main">
@@ -309,7 +309,7 @@
                             <a href="koolitusmajakas.html">
                                 <figure>
                                     <div class="portfolio-img"><img
-                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673787166/Koduleht/original_koolimajaks_mockup_2700x1335_oyeood.jpg"
+                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674306214/Koduleht/original_koolimajaks_mockup_2700x1335_copy_a1b2y1.webp"
                                             alt="" /></div>
                                     <!-- style="height: 631.98px;" -->
                                     <figcaption>
@@ -376,7 +376,7 @@
                             <a href="daim_marabou_uhistend.html">
                                 <figure>
                                     <div class="portfolio-img"><img
-                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673710877/Koduleht/floor-display-stand-mockup-right-view_2000x2000_yxnenp.jpg"
+                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674306210/Koduleht/floor-display-stand-mockup-right-view_2000x2000_copy_h3wbty.webp"
                                             alt="" /></div>
                                     <figcaption>
                                         <div class="portfolio-hover-main">
@@ -400,7 +400,7 @@
                             <a href="mars_roll_up_b2nner.html">
                                 <figure>
                                     <div class="portfolio-img"><img
-                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673776527/Koduleht/mars_roll-up_b2nner_h3jetc.jpg"
+                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674306303/Koduleht/mars_roll-up_b2nner_copy_qv4yho.webp"
                                             alt="" /></div>
                                     <figcaption>
                                         <div class="portfolio-hover-main">
@@ -424,7 +424,7 @@
                             <a href="syte.html">
                                 <figure>
                                     <div class="portfolio-img"><img
-                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673788307/Koduleht/syte_2000x200_g6kdfp.jpg"
+                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674306212/Koduleht/syte_2000x200_copy_vwu9jt.webp"
                                             alt="" /></div>
                                     <figcaption>
                                         <div class="portfolio-hover-main">
@@ -448,7 +448,7 @@
                             <a href="spordibanner.html">
                                 <figure>
                                     <div class="portfolio-img"><img
-                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673787506/Koduleht/champion_banner_org_2700x1336_jxiykh.jpg"
+                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674306212/Koduleht/champion_banner_org_2700x1336_copy_wuvczo.webp"
                                             alt="" /></div>
                                     <figcaption>
                                         <div class="portfolio-hover-main">
