koveretsi lehel tegin kui sa hoverid pildi peal siis tuleb pdf ikoon

--- a/konverents_logo.html
+++ b/konverents_logo.html
@@ -120,10 +120,11 @@
                     <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641652639/Koduleht/kvaliteedi_logo_wcrj4z.jpg"
                         class="w-100 zoom" alt="" />
                 </div>
-                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp"><a
-                        href="images/Data talks_esitlus.pdf" target="_blank"><img
+                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp  ">
+
+                    <a href="images/Data talks_esitlus.pdf" target="_blank"><img
                             src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673796329/Koduleht/Data-talks_esitlus_copy_qysbiq.jpg"
-                            class="w-100 zoom" alt="" />
+                            class="w-100 zoom hoverikoon" alt="" /> <img src="" alt="">
 
                 </div>
                 <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
