kavandide mockupi lisamine

--- a/konverents_logo.html
+++ b/konverents_logo.html
@@ -129,13 +129,10 @@
 
                 </div>
                 <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673792604/Koduleht/kavandid_koveresi_v8gla3.jpg"
+                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674410372/Koduleht/kavanidid_kodqil.webp"
                         class="w-100 zoom" alt="" />
                 </div>
-                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673795259/Koduleht/kavand2_yoginh.jpg"
-                        class="w-100 zoom" alt="" />
-                </div>
+
 
             </div>
         </div>
