lightboxi itemi lisamine ajakirja lehele

--- a/ajakiri.html
+++ b/ajakiri.html
@@ -136,8 +136,29 @@
                 </div>
                 <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
                     <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1665569400/Koduleht/Meist_wfgayg.jpg"
-                        class="w-100" alt="" />
+                        class="w-100 lightbox-group-gallery-item" alt="" />
                 </div>
+                <!-- start image gallery item -->
+                <li class="grid-item wow animate__fadeInUp">
+                    <a href="https://via.placeholder.com/850x1000" title="Lightbox gallery image title..."
+                        data-group="two-columns-zoom-animation" class="lightbox-group-gallery-item">
+                        <figure>
+                            <div class="portfolio-img bg-extra-dark-gray"><img
+                                    src="https://via.placeholder.com/850x1000" alt="" class="project-img-gallery" />
+                            </div>
+                            <figcaption>
+                                <div class="portfolio-hover-main text-center">
+                                    <div class="portfolio-hover-box align-middle">
+                                        <div class="portfolio-hover-content position-relative">
+                                            <i class="ti-zoom-in text-white-2 fa-2x"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </figcaption>
+                        </figure>
+                    </a>
+                </li>
+                <!-- end image gallery item -->
 
             </div>
         </div>
