--- a/ajakiri.html
+++ b/ajakiri.html
@@ -136,7 +136,7 @@
                 </div>
                 <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
                     <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1665569400/Koduleht/Meist_wfgayg.jpg"
-                        class="w-100 lightbox-group-gallery-item" alt="" />
+                        class="w-100" alt="" />
                 </div>
                 <!-- start image gallery item -->
                 <li class="grid-item wow animate__fadeInUp">
