koverentsi lehel vahetamine pdf pildi svgega

--- a/konverents_logo.html
+++ b/konverents_logo.html
@@ -123,7 +123,7 @@
                 <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp  ">
 
                     <a href="images/Data talks_esitlus.pdf" target="_blank"><img
-                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673796329/Koduleht/Data-talks_esitlus_copy_qysbiq.jpg"
+                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674476214/Koduleht/Data_talks_esitlus_copy_copy-44_nkdbup.svg"
                             class="w-100 zoom hoverikoon" alt="" /> <img src="" alt="">
 
 
