ajakirja lehele lisamine juht6petja interview

--- a/ajakiri.html
+++ b/ajakiri.html
@@ -138,13 +138,19 @@
                     <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1665569400/Koduleht/Meist_wfgayg.jpg"
                         class="w-100" alt="" />
                 </div>
+                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
+                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674479550/Koduleht/mesist_ja_interwew_tehnologia_oct_5_copy_rukubs.webp"
+                        class="w-100" alt="" />
+                </div>
                 <!-- start image gallery item -->
-                <li class="grid-item wow animate__fadeInUp">
-                    <a href="https://via.placeholder.com/850x1000" title="Lightbox gallery image title..."
-                        data-group="two-columns-zoom-animation" class="lightbox-group-gallery-item">
+                <!-- <li class="grid-item wow animate__fadeInUp">
+                    <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674479182/Koduleht/mesist_ja_interwew_tehnologia_oct_5_pgdfca.webp"
+                        title="Lightbox gallery image title..." data-group="two-columns-zoom-animation"
+                        class="lightbox-group-gallery-item">
                         <figure>
                             <div class="portfolio-img bg-extra-dark-gray"><img
-                                    src="https://via.placeholder.com/850x1000" alt="" class="project-img-gallery" />
+                                    src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674479182/Koduleht/mesist_ja_interwew_tehnologia_oct_5_pgdfca.webp"
+                                    alt="" class="project-img-gallery" />
                             </div>
                             <figcaption>
                                 <div class="portfolio-hover-main text-center">
@@ -157,7 +163,7 @@
                             </figcaption>
                         </figure>
                     </a>
-                </li>
+                </li> -->
                 <!-- end image gallery item -->
 
             </div>
