minu cvi lehele programmide nimed

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                                                 <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                                 <span
                                                     class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Juhtimiskonverents</span>
-                                                <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo ja
+                                                <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo
                                                     Reklaam</p>
                                             </div>
                                         </div>
@@ -186,7 +186,8 @@
                         </li>
                         <!-- end portfolio item -->
                         <!-- start portfolio item -->
-                        <li class="grid-item grid-item-double logo Disain wow animate__fadeInUp" data-wow-delay="0.4s">
+                        <li class="grid-item grid-item-double logo Disain cvi wow animate__fadeInUp"
+                            data-wow-delay="0.4s">
                             <a href="minu_cvi.html">
                                 <figure>
                                     <div class="portfolio-img"><img
@@ -200,7 +201,7 @@
                                                     class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Oliver
                                                     Juss Logo</span>
                                                 <p class="no-letter-spacing text-small mb-0 text-medium-gray">
-                                                    Logo ja Disain</p>
+                                                    Logo, Disain ja CVI</p>
                                             </div>
                                         </div>
                                     </figcaption>
