minu cvi tehtud

--- a/minu_cvi.html
+++ b/minu_cvi.html
@@ -108,11 +108,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641670974/Koduleht/Logo_erinevad_varvid_lmhefc.jpg"
+                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674485953/Koduleht/Minulogoesitlus-03_age1fw.svg"
                         class="w-100 zoom" alt="" />
                 </div>
-                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641670976/Koduleht/Logomuster_ewgdjc.jpg"
+                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp ">
+                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674486369/Koduleht/Minulogoesitlus-13_owdwt9.svg"
                         class="w-100 zoom" alt="" />
                 </div>
                 <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
@@ -120,7 +120,7 @@
                         class="w-100 zoom" alt="" />
                 </div>
                 <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641653475/Koduleht/juss_kontor_riobi5.jpg"
+                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674483221/Koduleht/juss_plussi_mockup_okul88.webp"
                         class="w-100 zoom" alt="" />
                 </div>
 
