disaini kategooria lisamine minu cvile

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                         </li>
                         <!-- end portfolio item -->
                         <!-- start portfolio item -->
-                        <li class="grid-item grid-item-double logo Disain cvi wow animate__fadeInUp"
+                        <li class="grid-item grid-item-double logo disain cvi wow animate__fadeInUp"
                             data-wow-delay="0.4s">
                             <a href="minu_cvi.html">
                                 <figure>
